--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
   outline: none;
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
 }
 
 a {
@@ -28,6 +29,133 @@ li {
   background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.drawer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background: #fff;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+
+  h2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+    img {
+      opacity: 0.5;
+      cursor: pointer;
+      transition: opacity 0.2s ease-in-out;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+
+  .cartContent {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .items {
+    overflow: auto;
+    .cartItem {
+      display: flex;
+      position: relative;
+      align-items: center;
+      border: 1px solid #f3f3f3;
+      padding: 15px;
+      border-radius: 20px;
+      overflow: hidden;
+      margin-bottom: 20px;
+
+      .cartImg {
+        width: 70px;
+        height: 70px;
+        margin-right: 20px;
+      }
+
+      .cart_description {
+        margin-right: 12px;
+        p {
+          font-size: 16px;
+        }
+        b {
+          font-size: 14px;
+        }
+      }
+
+      .itemRemove {
+        opacity: 0.5;
+        cursor: pointer;
+        transition: opacity 0.2s ease-in-out;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  .totalPrice {
+    .priceList {
+      .priceListItem {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+
+        div {
+          flex: 1;
+          margin: 0 10px 3px 10px;
+          border-bottom: 1px dashed #f3f3f3;
+        }
+      }
+    }
+    button {
+      display: block;
+      position: relative;
+      margin: 24px auto;
+
+      transition: all 0.4s ease-in-out;
+
+      &:hover {
+        background-color: #fff;
+        color: #9dd458;
+      }
+    }
+  }
+}
+
+.btn {
+  width: 100%;
+  border-radius: 18px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #9dd458;
+  outline: none;
+  padding: 18px;
+  background-color: #9dd458;
+  cursor: pointer;
 }
 
 header {
@@ -73,8 +201,25 @@ header {
 .content {
   padding: 40px;
 
-  h1 {
+  .content_header {
+    display: flex;
+    align-items: center;
     margin-bottom: 40px;
+    justify-content: space-between;
+
+    .search-block {
+      display: flex;
+      border-radius: 10px;
+      padding: 0 15px;
+      border: 1px solid #f3f3f3;
+
+      input {
+        border: 0;
+        padding: 13px;
+        font-size: 16px;
+        width: 200px;
+      }
+    }
   }
 
   .items {
@@ -88,6 +233,18 @@ header {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      transition: box-shadow 0.4s ease-in-out,
+        transform 0.4s ease-in-out;
+
+      &:hover {
+        box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+        transform: translateY(-10px);
+      }
+
+      .favorite {
+        position: absolute;
+        cursor: pointer;
+      }
 
       img {
         display: block;
